# WBTSdatafork

./: .gitignore  README.md  load_ADCP_data.ipynb  load_CTD_data.ipynb  load_data.ipynb  playground.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  test.py
.github/workflows/: docs.yml  docs_deploy.yml
WBTSdata/: attr_input.py  convert.py  load_cal_files.py  load_vel_files.py  merge_datasets.py  missing_datetime_2005_05.py  plotters.py  tools.py  vocabularies.py
docs/source/: WBTSdata.rst  conf.py  index.rst
load_data/: Missions.yml  attr_input.py  config.yaml  convert.py  load_cal_files.py  load_vel_files.py  merge_datasets.py  plotters.py  tools.py  vocabularies.py
notebooks/: demo.ipynb  load_ADCP_data.ipynb  load_CTD_data.ipynb  load_cal_files.ipynb  load_cal_files.py  load_data.ipynb  load_vel_files.py
